--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2322424/minireset.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body class="container">
+    <nav>
+      <ul class="menu">
+        <li>
+          <a href="">YZW,&nbsp;</a>
+        </li>
+        <li>
+          <a href="">CONTACTO,&nbsp;</a>
+        </li>
+        <li>
+          <a href="">INFO</a>
+        </li>
+      </ul>
+      <p>
+        ACTUALMENTE EN LA CDMX
+      </p>
+    </nav>
+    <main>
+      <h2>
+        * REDES INÁLAMBRICAS / EDITORIAL / 2020 *
+      </h2>
+      <img src="assets/images/tramas.jpg" alt="tramas" />
+    </main>
+    <footer class="footer">
+      <a href="https:/instagram.com/000001000.2">
+        @000001000.2
+      </a>
+    </footer>
+  </body>
 </html>
