--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         ACTUALMENTE EN LA CDMX
       </p>
     </nav>
-    <main>
+    <main class="main">
       <h2>
         * REDES INÁLAMBRICAS / EDITORIAL / 2020 *
       </h2>
