--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="container">
+  <body class="container contacto">
     <nav>
       <ul class="menu">
         <li>
@@ -28,17 +28,9 @@
         ACTUALMENTE EN LA CDMX
       </p>
     </nav>
-    <main class="main">
-      <h2>
-        *REDES INÁLAMBRICAS / EDITORIAL / 2020*
-      </h2>
-      <img src="assets/images/tramas.jpg" alt="tramas" />
+    <main class="contacto-container">
+      <a href="mailto:yzarkin@gmail.com">yzarkin@gmail.com</a>
     </main>
-    <div class="swipe" hidden>
-      <p>
-        s&nbsp;w&nbsp;i&nbsp;p&nbsp;e
-      </p>
-    </div>
     <footer class="footer">
       <a href="https:/instagram.com/000001000.2">
         ig @000001000.2
