--- a/index.html
+++ b/index.html
@@ -32,13 +32,57 @@
       <h2>
         *REDES INÁLAMBRICAS / EDITORIAL / 2020*
       </h2>
+
+      <div class="slider">
+        <div class="imagenes">
+          <div class="imagen actual">
+            <img src="https://source.unsplash.com/random/400x500" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/tramas.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="https://source.unsplash.com/random/400x500" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/tramas.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="https://source.unsplash.com/random/400x500" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/tramas.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="https://source.unsplash.com/random/400x500" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/tramas.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="https://source.unsplash.com/random/400x500" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/tramas.jpg" alt="" />
+          </div>
+        </div>
+        <div class="controles" hidden>
+          <button class="anterior">←</button>
+          <button class="siguiente">→</button>
+        </div>
+      </div>
+      <!--
       <img src="assets/images/tramas.jpg" alt="tramas" />
+      -->
+      <button class="swipe">swipe</button>
     </main>
+    <!--
     <div class="swipe" hidden>
       <p>
         s&nbsp;w&nbsp;i&nbsp;p&nbsp;e
       </p>
     </div>
+    -->
     <footer class="footer">
       <a href="https:/instagram.com/000001000.2">
         ig @000001000.2
