--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="container" contacto>
+  <body class="container">
     <nav>
       <ul class="menu">
         <li>
@@ -28,8 +28,11 @@
         ACTUALMENTE EN LA CDMX
       </p>
     </nav>
-    <main class="contacto">
-      <a href="mailto:yzarkin@gmail.com">yzarkin@gmail.com</a>
+    <main class="info">
+      <p>
+        HOLA, SOY YOANNA ZARKIN. VIVO EN LA CDMX Y ESTUDIO COMNUNICACIÓN VISUAL
+         Y DISEÑO. HAGO FOTOS, DISEÑO, WEB, LIBROS, CARTELES Y VISUALES
+      </p>
     </main>
     <footer class="footer">
       <a href="https:/instagram.com/000001000.2">
