--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
       <a href="mailto:yzarkin@gmail.com">yzarkin@gmail.com</a>
     </main>
     <footer class="footer">
-      <a href="https:/instagram.com/000001000.2">
+      <a href="https://instagram.com/000001000.2" target="_blank">
         ig @000001000.2
       </a>
     </footer>
