--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2322424/minireset.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="container">
     <nav>
@@ -36,40 +36,20 @@
       <div class="slider">
         <div class="imagenes">
           <div class="imagen actual">
-            <img src="https://source.unsplash.com/random/400x500" alt="" />
+            <img src="./assets/images/done/binario2.png" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/tramas.jpg" alt="" />
+            <img src="./assets/images/done/copia11.png" alt="" />
           </div>
           <div class="imagen">
-            <img src="https://source.unsplash.com/random/400x500" alt="" />
+            <img src="./assets/images/done/scan0401.png" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/tramas.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="https://source.unsplash.com/random/400x500" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/tramas.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="https://source.unsplash.com/random/400x500" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/tramas.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="https://source.unsplash.com/random/400x500" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/tramas.jpg" alt="" />
+            <img src="./assets/images/done/tramas.png" alt="" />
           </div>
         </div>
-        <div class="controles" hidden>
-          <button class="anterior">←</button>
-          <button class="siguiente">→</button>
-        </div>
+        <button class="anterior">←</button>
+        <button class="siguiente">←</button>
       </div>
       <!--
       <img src="assets/images/tramas.jpg" alt="tramas" />
@@ -84,9 +64,10 @@
     </div>
     -->
     <footer class="footer">
-      <a href="https:/instagram.com/000001000.2">
+      <a href="https://instagram.com/000001000.2" target="_blank">
         ig @000001000.2
       </a>
     </footer>
+    <script src="./js/main.js"></script>
   </body>
 </html>
