--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@
       </p>
     </main>
     <footer class="footer">
-      <a href="https:/instagram.com/000001000.2">
+      <a href="https://instagram.com/000001000.2" target="_blank">
         ig @000001000.2
       </a>
     </footer>
