--- a/index.html
+++ b/index.html
@@ -25,27 +25,72 @@
         </li>
       </ul>
       <p>
-        ACTUALMENTE EN LA CDMX
+        COMUNICACIÓN VISUAL Y DISEÑO
       </p>
     </nav>
     <main class="main">
       <h2>
-        *REDES INÁLAMBRICAS / EDITORIAL / 2020*
+        ∮ PRELUDIOS / EDITORIAL / 2020
       </h2>
 
       <div class="slider">
         <div class="imagenes">
           <div class="imagen actual">
-            <img src="./assets/images/done/binario2.png" alt="" />
+            <img src="./assets/images/done/16.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/copia11.png" alt="" />
+            <img src="./assets/images/done/1.png" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/scan0401.png" alt="" />
+            <img src="./assets/images/done/2.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/tramas.png" alt="" />
+            <img src="./assets/images/done/3.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/4.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/5.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/6.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/7.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/8.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/9.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/10.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/11.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/12.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/13.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/14.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/15.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/17.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/18.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/19.jpg" alt="" />
           </div>
         </div>
         <button class="anterior">←</button>
