--- a/contacto.html
+++ b/contacto.html
@@ -15,17 +15,17 @@
     <nav>
       <ul class="menu">
         <li>
-          <a href="">YZW,&nbsp;</a>
+          <a href="/">YZW,&nbsp;</a>
         </li>
         <li>
-          <a href="">CONTACTO,&nbsp;</a>
+          <a href="./contacto.html">CONTACTO,&nbsp;</a>
         </li>
         <li>
-          <a href="">INFO</a>
+          <a href="./info.html">INFO</a>
         </li>
       </ul>
       <p>
-        ACTUALMENTE EN LA CDMX
+        COMUNICACIÓN VISUAL Y DISEÑO
       </p>
     </nav>
     <main class="contacto">
