--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <nav>
       <ul class="menu">
         <li>
-          <a href="">YZW,&nbsp;</a>
+          <a href="/">YZW,&nbsp;</a>
         </li>
         <li>
-          <a href="">CONTACTO,&nbsp;</a>
+          <a href="./contacto.html">CONTACTO,&nbsp;</a>
         </li>
         <li>
-          <a href="">INFO</a>
+          <a href="./info.html">INFO</a>
         </li>
       </ul>
       <p>
@@ -32,23 +32,28 @@
       <h2>
         ∮ PRELUDIOS / EDITORIAL / 2020
       </h2>
-
+      <div class="showcase"></div>
       <div class="slider">
         <div class="imagenes">
           <div class="imagen actual">
-            <img src="./assets/images/done/16.jpg" alt="" />
+            <img
+              data-nombre="Preludios"
+              src="./assets/images/preludios.jpg"
+              alt="Preludios"
+            />
+          </div>
+          <div data-nombre="Dos" class="imagen">
+            <img src="./assets/images/done/1.png" alt="Uno" />
+            <p>Uno</p>
+          </div>
+          <div data-nombre="Tres" class="imagen">
+            <img src="./assets/images/done/2.jpg" alt="Dos" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/1.png" alt="" />
+            <img src="./assets/images/done/3.png" alt="Tres" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/2.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/3.png" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/4.png" alt="" />
+            <img src="./assets/images/done/4.png" alt="Cuatro" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/5.jpg" alt="" />
@@ -99,8 +104,8 @@
       <!--
       <img src="assets/images/tramas.jpg" alt="tramas" />
       -->
-      <button class="swipe">swipe</button>
     </main>
+
     <!--
     <div class="swipe" hidden>
       <p>
