--- a/info.html
+++ b/info.html
@@ -15,24 +15,30 @@
     <nav>
       <ul class="menu">
         <li>
-          <a href="">YZW,&nbsp;</a>
+          <a href="/">YZW,&nbsp;</a>
         </li>
         <li>
-          <a href="">CONTACTO,&nbsp;</a>
+          <a href="./contacto.html">CONTACTO,&nbsp;</a>
         </li>
         <li>
-          <a href="">INFO</a>
+          <a href="./info.html">INFO</a>
         </li>
       </ul>
       <p>
-        ACTUALMENTE EN LA CDMX
+        COMUNICACIÓN VISUAL Y DISEÑO
       </p>
     </nav>
     <main class="info">
       <p>
-        HOLA, SOY YOANNA ZARKIN. VIVO EN LA CDMX Y ESTUDIO COMNUNICACIÓN VISUAL
-         Y DISEÑO. HAGO FOTOS, DISEÑO, WEB, LIBROS, CARTELES Y VISUALES
+        HOLA ( ͡° ͜ʖ ͡°)! SOY YOANNA ZARKIN. ACTUALMENTE TRABAJO EN CDMX DE MANERA
+        INDEPENDIENTE. HAGO IDENTIDAD, EDITORIAL, Y MUCHAS COSAS MÁS ❦
       </p>
+      <a
+        href="https://open.spotify.com/playlist/7llQbSuOVYTc6DYIfpk1i8?si=oy567bVrRxKGJ248mrHlcg"
+        target="_blank"
+      >
+        ———Actualmente escuchando–——
+      </a>
     </main>
     <footer class="footer">
       <a href="https://instagram.com/000001000.2" target="_blank">
