--- a/index.html
+++ b/index.html
@@ -38,15 +38,29 @@
               alt="Preludios"
             />
           </div>
-          <div data-nombre="Dos" class="imagen">
-            <img src="./assets/images/done/1.png" alt="Uno" />
-            <p>Uno</p>
+          <div class="imagen">
+            <img src="./assets/images/done/18.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/tequila.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/boobs.png" alt="" />
           </div>
           <div data-nombre="Tres" class="imagen">
             <img src="./assets/images/done/2.jpg" alt="Dos" />
           </div>
+          <div data-nombre="Dos" class="imagen">
+            <img src="./assets/images/done/1.png" alt="Uno" />
+          </div>
+          <div data-nombre="Tres" class="imagen">
+            <img src="./assets/images/done/nw.png" alt="Dos" />
+          </div>
           <div class="imagen">
             <img src="./assets/images/done/3.png" alt="Tres" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/33.png" alt="Tres" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/4.png" alt="Cuatro" />
@@ -76,9 +90,6 @@
             <img src="./assets/images/done/12.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/13.jpg" alt="" />
-          </div>
-          <div class="imagen">
             <img src="./assets/images/done/14.jpg" alt="" />
           </div>
           <div class="imagen">
@@ -86,9 +97,6 @@
           </div>
           <div class="imagen">
             <img src="./assets/images/done/17.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/18.jpg" alt="" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/19.jpg" alt="" />
