--- a/info.html
+++ b/info.html
@@ -30,14 +30,14 @@
     </nav>
     <main class="info">
       <p>
-        HOLA ( ͡° ͜ʖ ͡°)! SOY YOANNA ZARKIN. ACTUALMENTE TRABAJO EN CDMX DE MANERA
+        ( ͡° ͜ʖ ͡°)! SOY YOANNA ZARKIN. ACTUALMENTE TRABAJO EN CDMX DE MANERA
         INDEPENDIENTE. HAGO IDENTIDAD, EDITORIAL, Y MUCHAS COSAS MÁS ❦
       </p>
       <a
         href="https://open.spotify.com/playlist/7llQbSuOVYTc6DYIfpk1i8?si=oy567bVrRxKGJ248mrHlcg"
         target="_blank"
       >
-        ———Actualmente escuchando–——
+        ₪
       </a>
     </main>
     <footer class="footer">
