--- a/info.html
+++ b/info.html
@@ -31,7 +31,8 @@
     <main class="info">
       <p>
         ( ͡° ͜ʖ ͡°)! SOY YOANNA ZARKIN. ACTUALMENTE TRABAJO EN CDMX DE MANERA
-        INDEPENDIENTE. HAGO IDENTIDAD, EDITORIAL, Y MUCHAS COSAS MÁS ❦
+        INDEPENDIENTE. HAGO IDENTIDAD, EDITORIAL, fotografía Y MUCHAS COSAS MÁS
+        ❦
       </p>
       <a
         href="https://open.spotify.com/playlist/7llQbSuOVYTc6DYIfpk1i8?si=oy567bVrRxKGJ248mrHlcg"
