--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
           <a href="/">YZW,&nbsp;</a>
         </li>
         <li>
-          <a href="./contacto.html">CONTACTO,&nbsp;</a>
+          <a href="./contacto.html" active>CONTACTO,&nbsp;</a>
         </li>
         <li>
           <a href="./info.html">INFO</a>
