--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <ul class="menu">
         <li>
-          <a href="/">YZW,&nbsp;</a>
+          <a href="/" active>YZW,&nbsp;</a>
         </li>
         <li>
           <a href="./contacto.html">CONTACTO,&nbsp;</a>
@@ -102,8 +102,8 @@
             <img src="./assets/images/done/19.jpg" alt="" />
           </div>
         </div>
-        <button class="anterior">←</button>
-        <button class="siguiente">←</button>
+        <button class="anterior"></button>
+        <button class="siguiente"></button>
       </div>
       <!--
       <img src="assets/images/tramas.jpg" alt="tramas" />
