--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
           <a href="./contacto.html">CONTACTO,&nbsp;</a>
         </li>
         <li>
-          <a href="./info.html">INFO</a>
+          <a href="./info.html" active>INFO</a>
         </li>
       </ul>
       <p>
