--- a/index.html
+++ b/index.html
@@ -32,74 +32,67 @@
       <div class="slider">
         <div class="imagenes">
           <div class="imagen actual">
-            <img
-              data-nombre="Preludios"
-              src="./assets/images/preludios.jpg"
-              alt="Preludios"
-            />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/18.jpg" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/tequila.png" alt="" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/boobs.png" alt="" />
-          </div>
-          <div data-nombre="Tres" class="imagen">
-            <img src="./assets/images/done/2.jpg" alt="Dos" />
-          </div>
-          <div data-nombre="Dos" class="imagen">
-            <img src="./assets/images/done/1.png" alt="Uno" />
-          </div>
-          <div data-nombre="Tres" class="imagen">
-            <img src="./assets/images/done/nw.png" alt="Dos" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/3.png" alt="Tres" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/33.png" alt="Tres" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/4.png" alt="Cuatro" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/5.jpg" alt="" />
+            <img src="./assets/images/done/preludios.jpg" alt="Preludios" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/6.png" alt="" />
           </div>
           <div class="imagen">
+            <img src="./assets/images/done/18.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/19.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/3.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/4.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/2.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/5.jpg" alt="" />
+          </div>
+          <div class="imagen">
             <img src="./assets/images/done/7.png" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/8.jpg" alt="" />
+            <img src="./assets/images/done/1.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/20.jpg" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/boobs.png" alt="" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/tequila.png" alt="" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/9.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/10.jpg" alt="" />
+            <img src="./assets/images/done/8.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/11.jpg" alt="" />
+            <img src="./assets/images/done/10.jpg" alt="" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/12.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/14.jpg" alt="" />
+            <img src="./assets/images/done/11.jpg" alt="" />
           </div>
           <div class="imagen">
             <img src="./assets/images/done/15.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/17.jpg" alt="" />
+            <img src="./assets/images/done/port.jpg" alt="" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/19.jpg" alt="" />
+            <img src="./assets/images/done/17.jpg" alt="" />
           </div>
         </div>
         <button class="anterior"></button>
