--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>portafolio</title>
+    <title>yzw</title>
     <link
       rel="stylesheet"
       href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2322424/minireset.css"
