--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="container">
+  <body class="home container">
     <nav>
       <ul class="menu">
         <li>
@@ -32,64 +32,67 @@
       <div class="slider">
         <div class="imagenes">
           <div class="imagen actual">
-            <img src="./assets/images/done/preludios.jpg" alt="Preludios" />
+            <img src="./assets/images/done/preludios.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/6.png" alt="" />
+            <img src="./assets/images/done/6.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/18.jpg" alt="" />
+            <img src="./assets/images/done/18.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/19.jpg" alt="" />
+            <img src="./assets/images/done/19.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/3.png" alt="" />
+            <img src="./assets/images/done/3.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/4.png" alt="" />
+            <img src="./assets/images/done/4.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/2.jpg" alt="" />
+            <img src="./assets/images/done/2.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/5.jpg" alt="" />
+            <img src="./assets/images/done/5.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/7.png" alt="" />
+            <img src="./assets/images/done/7.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/1.png" alt="" />
+            <img src="./assets/images/done/1.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/20.jpg" alt="" />
+            <img src="./assets/images/done/20.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/boobs.png" alt="" />
+            <img src="./assets/images/done/boobs.png" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/9.jpg" alt="" />
+            <img src="./assets/images/done/9.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/8.jpg" alt="" />
+            <img src="./assets/images/done/8.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/10.jpg" alt="" />
+            <img src="./assets/images/done/10.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/12.jpg" alt="" />
+            <img src="./assets/images/done/12.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/11.jpg" alt="" />
+            <img src="./assets/images/done/11.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/15.jpg" alt="" />
+            <img src="./assets/images/done/15.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/port.jpg" alt="" />
+            <img src="./assets/images/done/new.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
           <div class="imagen">
-            <img src="./assets/images/done/17.jpg" alt="" />
+            <img src="./assets/images/done/port.jpg" alt="CAℜGA𝔑D𝔒…" />
+          </div>
+          <div class="imagen">
+            <img src="./assets/images/done/17.jpg" alt="CAℜGA𝔑D𝔒…" />
           </div>
         </div>
         <button class="anterior"></button>
