--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="home container">
+  <body class="home">
     <nav>
       <ul class="menu">
         <li>
@@ -28,88 +28,159 @@
         COMUNICACIÓN VISUAL Y DISEÑO
       </p>
     </nav>
-    <main class="main">
-      <div class="slider">
-        <div class="imagenes">
-          <div class="imagen actual">
-            <img src="./assets/images/done/preludios.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/6.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/18.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/19.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/3.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/4.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/2.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/5.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/7.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/1.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/20.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/boobs.png" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/9.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/8.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/10.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/12.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/11.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/15.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/new.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/port.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
-          <div class="imagen">
-            <img src="./assets/images/done/17.jpg" alt="CAℜGA𝔑D𝔒…" />
-          </div>
+    <div class="slider">
+      <div class="imagenes">
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="https://res.cloudinary.com/dbwfz41kk/image/upload/v1591895881/preludios_w8b7l2.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
         </div>
-        <button class="anterior"></button>
-        <button class="siguiente"></button>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/6.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen actual">
+          <img
+            class="image-contain"
+            src="./assets/images/done/18.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/19.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/3.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/4.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/2.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/5.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/7.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/1.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/20.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/boobs.png"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/9.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/8.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/10.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/12.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/11.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/15.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/new.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/port.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
+        <div class="imagen">
+          <img
+            class="image-contain"
+            src="./assets/images/done/17.jpg"
+            alt="CAℜGA𝔑D𝔒…"
+          />
+        </div>
       </div>
-      <!--
-      <img src="assets/images/tramas.jpg" alt="tramas" />
-      -->
-    </main>
-
-    <!--
-    <div class="swipe" hidden>
-      <p>
-        s&nbsp;w&nbsp;i&nbsp;p&nbsp;e
-      </p>
+      <button class="anterior"></button>
+      <button class="siguiente"></button>
     </div>
-    -->
     <footer class="footer">
       <a href="https://instagram.com/000001000.2" target="_blank">
         ig @000001000.2
